<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Carbon</string>
    <string name="return_to_home">Return to Home</string>
    <string name="statistics">Statistics</string>
    <string name="offset">Offset</string>
    <string name="change_your_footprint">Change your footprint</string>
    <string name="about_the_app">About the App</string>
    <string name="logout">Logout</string>
    <string name="manage_your_carbon_footprint">Manage your carbon footprint</string>
    <string name="carbon">Carbon</string>
    <string name="manage">Manage your carbon footprint</string>
    <string name="alt_text">spinning earth image</string>
    <string name="app_tagline">Play a role in saving the planet</string>
    <string name="welcome">Welcome to Carbon</string>
    <string name="info1">Carbon is your environmental assistant, and will help you monitor and control your carbon emissions.</string>
    <string name="info2">This way, you can help play a role in managing your carbon footprint.</string>
    <string name="info0">The planet is facing a crisis, and it\'s up to us to act now. Together, we can combat climate change and create a sustainable future.</string>
    <string name="continue_btn">Continue</string>
    <string name="begin_btn">Begin</string>
    <string name="quiz_info_image">An image of melting glaciers</string>
    <string name="alt_text_2">factories giving out smoke</string>
    <string name="quiz_info1">Please answer a few questions so we can calculate your carbon footprint</string>
    <string name="next_btn">Next</string>
    <string name="version_title">About the App</string>
    <string name="version_developer">Developed by Aditya Dubey</string>
    <string name="version_launch">First launched in September 2021</string>
    <string name="version_relaunch">Relaunched on January 2024</string>
    <string name="version_contact">Contact at adityadubeyms@gmail.com</string>
    <string name="version_logo">Logo designed by Shreya Gupta</string>
    <string name="version_btn">Home</string>
    <string name="history_title">Your History</string>
    <string name="history_time">Time</string>
    <string name="history_footprint">Footprint</string>
    <string name="home_title">Home</string>
    <string name="home_footprint1">Your carbon footprint is</string>
    <string name="home_footprint2">Here</string>
    <string name="home_footprint3">metric tons</string>
    <string name="home_setoff1">You have set off approximately</string>
    <string name="home_setoff2">Here</string>
    <string name="home_setoff3">metric tons of carbon</string>
    <string name="home_planted1">You have planted</string>
    <string name="home_planted2">Here</string>
    <string name="home_planted3">trees</string>
    <string name="home_net1">Your net carbon emissions are</string>
    <string name="home_net2">Here</string>
    <string name="home_net3">metric tons</string>
    <string name="history_btn">Your Footprint History</string>
    <string name="register_title">Sign Up</string>
    <string name="register_subheading">Create your account to begin your carbon journey</string>
    <string name="register_name">Name</string>
    <string name="register_phone">Phone</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_btn">Register</string>
    <string name="register_text">Already have an account?</string>
    <string name="register_btn2">Login</string>
    <string name="login_title">Login</string>
    <string name="login_subheading">Sign into your account to continue your carbon journey</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_text">Don\'t have an account?</string>
    <string name="login_btn2">Register</string>
    <string name="offset_title">Offset</string>
    <string name="offset_subheading">You can easily offset your carbon footprint by planting trees.</string>
    <string name="offset_fact">A typical tree absorbs up to 48 pounds of CO2 from the atmosphere yearly. Over its lifespan, it might even absorb a tonne of carbon.</string>
    <string name="offset_steps">You can offset your carbon footprint by: \n1. Planting trees yourself. \n2. Paying a non-profit to plant trees for you.</string>
    <string name="offset_organization_info">Say Trees is a reputable organization that plants and takes care of a tree for you at a low cost of ₹100.</string>
    <string name="offset_trees_info">The number of trees you have planted so far is:</string>
    <string name="offset_trees_count_label">Trees planted:</string>
    <string name="offset_trees_count">0</string> <!-- Default value; update programmatically -->
    <string name="offset_additional_trees">If you have planted any additional trees, enter the number below:</string>
    <string name="offset_additional_trees_hint">Enter the number</string>
    <string name="offset_enter_btn">Submit</string>
    <string name="offset_carbon_footprint_label">Your carbon footprint (after being offset) is:</string>
    <string name="offset_carbon_footprint_value">0 metric tons</string> <!-- Default value; update programmatically -->
    <string name="offset_return_home_btn">Return to Home</string>
    <string name="offset_tree_image">A signle big tree</string>
    <string name="result_info">Your carbon footprint is</string>
    <string name="result_fire_image">city on fire with a person looking at it</string>
    <string name="result_footprint">Here</string>
    <string name="result_units">metric tons</string>
    <string name="result_btn">Continue</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_fact1">1. CO2 levels reached 417 ppm in 2020, the highest in 4 million years.</string>
    <string name="statistics_fact2">2. The past decade was the hottest on record globally.</string>
    <string name="statistics_fact3">3. 178 million hectares of forests have been lost since 1990.</string>
    <string name="statistics_fact4">4. Restoring forests creates 6x more jobs than the oil industry.</string>
    <string name="statistics_fact5">5. 800 million people are vulnerable to climate change impacts.</string>
    <string name="statistics_fact6">6. Wildlife populations have dropped by 60% in just 40 years.</string>
    <string name="statistics_fact7">7. Oceans absorb over 90% of the heat trapped by greenhouse gases.</string>
    <string name="statistics_fact8">8. Air pollution causes around 7 million deaths globally each year.</string>
    <string name="statistics_return_btn">Return to Home</string>
    <string name="change1_title">1. Residence and Utilities</string>
    <string name="change1_q1">1. Please enter the number of people living in your household.</string>
    <string name="change1_a1">0</string>
    <string name="change1_q2">2. Please enter your household’s monthly electricity usage (in kWh)</string>
    <string name="change1_a2">0.0</string>
    <string name="change1_q3">3. Please enter your household’s monthly natural gas usage (in kWh)</string>
    <string name="change1_a3">0.0</string>
    <string name="change1_q4">4. Please enter your household\'s monthly LPG (liquefied petroleum gas) usage (in litres)</string>
    <string name="change1_a4">0.0</string>
    <string name="change1_q5">5. Please enter your household\'s monthly water usage (in litres)</string>
    <string name="change1_a5">0.0</string>
    <string name="change1_btn">Next</string>
    <string name="change2_section_title">2. Transportation</string>
    <string name="change2_q6">6. If you use a car, please answer the following questions.</string>
    <string name="change2_q6_petrol_mileage_with_unit">(a) Petrol: (i) Enter the mileage (in km/litre)</string>
    <string name="change2_q6_petrol_distance_with_unit">(ii) Enter the total distance driven (in km)</string>
    <string name="change2_q6_diesel_mileage_with_unit">(b) Diesel: (i) Enter mileage (in km/litre)</string>
    <string name="change2_q6_diesel_distance_with_unit">(ii) Enter total distance driven (in km)</string>
    <string name="change2_q7">7. If you were on a flight, please provide the total distance of the flights (in km).</string>
    <string name="change2_hint">0.0</string>
    <string name="change2_btn_next">Next</string>
    <string name="change3_title">3. Public Transport</string>
    <string name="change3_q8">8. Please enter the total approximate distance travelled in the following modes of transport (in kilometers)</string>
    <string name="change3_cab">(a) Cabs and Taxis</string>
    <string name="change3_hint">0.0</string>
    <string name="change3_bus">(b) Public Buses and Coaches</string>
    <string name="change3_local_train" tools:ignore="TypographyOther">(c) Local Commuter Trains</string>
    <string name="change3_intercity_train">(d) Intercity and Long-Distance Trains</string>
    <string name="change4_title">4. Diet and Expenditure</string>
    <string name="change4_hint">0.0</string>
    <string name="change4_diet">9. Please choose your diet type</string>
    <string name="change4_q10">10. Please your monthly expenditure on the following types of items (in INR)</string>
    <string name="change4_food">(a) Food and Drinks</string>
    <string name="change4_medicine">(b) Medicines and Healthcare Products</string>
    <string name="change4_clothes" tools:ignore="TypographyOther">(c) Clothes and Footwear</string>
    <string name="change4_books">(d) Books, Magazines and Newspapers</string>
    <string name="change4_tech">(e) Computers, Laptops, and IT Products</string>
    <string name="change4_gadget">(f) Phones, Gadgets, and Accessories</string>
    <string name="change4_vehicle">(g) Vehicle Maintenance, Insurance and Other Costs</string>
    <string name="change4_furniture">(h) Furniture</string>
    <string name="change4_leisure">(i) Dining, Hotels, and Bars</string>
    <string name="change4_bills">(j) Phone or Internet bills</string>
    <string name="change4_education">(k) Educational Fees</string>
    <string name="change4_entertain">(l) Recreational Activities (like hobbies, entertainment)</string>
    <string name="change4_btn">Submit</string>
    <string name="register_password2">Confirm Password</string>
</resources>