<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Offset">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/offset_title"
            android:text="@string/offset_title"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"
            style="@style/TextViewStyle.MainTitle" />

        <ImageView
            android:id="@+id/offset_tree_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="30dp"
            android:layout_below="@id/offset_title"
            android:contentDescription="@string/offset_tree_image"
            android:scaleType="centerCrop"
            android:src="@drawable/tree"
            android:background="@color/white"
            android:padding="1dp"
            android:cropToPadding="true" />

        <TextView
            android:id="@+id/offset_subheading"
            android:layout_below="@id/offset_tree_image"
            android:text="@string/offset_subheading"
            style="@style/TextViewStyle.SubInfo"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp" />

        <TextView
            android:id="@+id/offset_fact"
            android:layout_below="@id/offset_subheading"
            android:text="@string/offset_fact"
            style="@style/TextViewStyle.SubInfo"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp" />

        <TextView
            android:id="@+id/offset_steps"
            android:layout_below="@id/offset_fact"
            android:text="@string/offset_steps"
            style="@style/TextViewStyle.SubInfo"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp" />

        <TextView
            android:id="@+id/offset_organization_info"
            android:layout_below="@id/offset_steps"
            android:text="@string/offset_organization_info"
            style="@style/TextViewStyle.SubInfo"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp" />

        <TextView
            android:id="@+id/offset_trees_info"
            android:layout_below="@id/offset_organization_info"
            android:text="@string/offset_trees_info"
            style="@style/TextViewStyle.SubInfo"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp" />

        <LinearLayout
            android:id="@+id/offset_trees_count_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/offset_trees_info"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/offset_trees_count_label"
                android:text="@string/offset_trees_count_label"
                style="@style/TextViewStyle.SubInfo"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/offset_trees_count"
                android:text="@string/offset_trees_count"
                style="@style/TextViewStyle.SubInfo" />
        </LinearLayout>

        <TextView
            android:id="@+id/offset_additional_trees"
            android:layout_below="@id/offset_trees_count_layout"
            android:text="@string/offset_additional_trees"
            style="@style/TextViewStyle.SubInfo"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp" />

        <EditText
            android:id="@+id/offset_additional_trees_input"
            android:layout_below="@id/offset_additional_trees"
            android:hint="@string/offset_additional_trees_hint"
            android:inputType="number"
            style="@style/TextViewStyle.Input"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp" />

        <Button
            android:id="@+id/offset_enter_btn"
            android:layout_below="@id/offset_additional_trees_input"
            android:text="@string/offset_enter_btn"
            style="@style/ButtonStyle.MainButton"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="80dp" />

        <TextView
            android:id="@+id/offset_carbon_footprint_label"
            android:layout_below="@id/offset_enter_btn"
            android:text="@string/offset_carbon_footprint_label"
            style="@style/TextViewStyle.SubInfo"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp" />

        <TextView
            android:id="@+id/offset_carbon_footprint_value"
            android:layout_below="@id/offset_carbon_footprint_label"
            android:text="@string/offset_carbon_footprint_value"
            style="@style/TextViewStyle.SubInfo"
            android:layout_marginTop="10dp"
            android:gravity="center" />

        <Button
            android:id="@+id/offset_return_home_btn"
            android:layout_below="@id/offset_carbon_footprint_value"
            android:text="@string/offset_return_home_btn"
            style="@style/ButtonStyle.MainButton"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="80dp"
            android:layout_marginBottom="50dp" />
    </RelativeLayout>
</ScrollView>